Queue execution runtime (#051) (#100)
